fix layout on mobile + fix profiles on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,12 @@ html {
 @media only screen and (min-width: 2200px) {
   body {
     margin: 0 auto;
-    width: 80%;
+    width: 100%;
+}
+}
+
+@media (max-width: 786px) {
+  #__next {
+    display: flex
   }
 }
